tests/baselines/reference/argumentsObjectIterator01_ES5(target=es5).errors.txt
argumentsObjectIterator01_ES5.ts(3,21): error TS2802: Type 'IArguments' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== argumentsObjectIterator01_ES5.ts (1 errors) ====
    function doubleAndReturnAsArray(x: number, y: number, z: number): [number, number, number] {
        let result = [];
        for (let arg of arguments) {
                        ~~~~~~~~~
!!! error TS2802: Type 'IArguments' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.
            result.push(arg + arg);
        }
        return <[any, any, any]>result;
    }